@@ -231,6 +231,17 @@ max_heal_lv: 11
 //    (note that by default all Castles have the nowarpto flag)
 emergency_call: 15
 
+// Guild Aura Skills setting (add as appropiate).
+// (This affects GD_LEADERSHIP, GD_GLORYWOUNDS, GD_SOULCOLD and GD_HAWKEYES)
+// Note that for the skill to be usable at all, 
+// you need at least one of 1/2 and 4/8
+// 1: Skill works outside of woe.
+// 2: Skill works during woe.
+// 4: Skill works outside of GvG grounds
+// 8: Skill works on GvG grounds
+//16: Disable skill from affecting Guild Master
+guild_aura: 31
+
 // Max Possible Level of Monster skills
 // Note: If your MVPs are too tough, reduce it to 10.
 mob_max_skilllvl: 100
